--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
         env:
           RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
         run: |
-          curl -X POST https://api.render.com/deploy/srv-<YOUR_SERVICE_ID>?key=$RENDER_API_KEY
+          curl -X POST https://api.render.com/deploy/srv-cvd4t3rtq21c73a931vg?key=$RENDER_API_KEY
